results/SpecGenBench/conversational/log-AddLoop-2023_05_16_23_04_29.txt

public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreases n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
            }
        } else {
            int n = -y;
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreases n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}


/home/max/Documents/JMLGPT/tmp/AddLoop.java:17: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method AddLoop
            //@ maintaining sum == x + y + n;
                ^
1 verification failure


public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreases n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
                //@ maintaining sum == x + y - n;
            }
        } else {
            int n = -y;
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreases n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
                //@ maintaining sum == x + y + n;
            }
        }
        return sum;
    }
}


/home/max/Documents/JMLGPT/tmp/AddLoop.java:15: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:14: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y - n;
                    ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:25: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:24: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y + n;
                    ^
4 errors


public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
                //@ maintaining sum == x + y - n;
            }
        } else {
            int n = -y;
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
                //@ maintaining sum == x + y + n;
            }
        }
        return sum;
    }
}


/home/max/Documents/JMLGPT/tmp/AddLoop.java:15: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:14: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y - n;
                    ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:25: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:24: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y + n;
                    ^
4 errors


public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
                //@ maintaining sum == x + y - n;
                //@ decreasing n;
            }
        } else {
            int n = -y;
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
                //@ maintaining sum == x + y + n;
                //@ decreasing n;
            }
        }
        return sum;
    }
}


/home/max/Documents/JMLGPT/tmp/AddLoop.java:16: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:14: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y - n;
                    ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:27: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:25: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y + n;
                    ^
4 errors


public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
                //@ maintaining sum == x + y - n;
                //@ decreasing n;
            }
        } else {
            int n = -y;
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
                //@ maintaining sum == x + y + n;
                //@ decreasing n;
            }
        }
        return sum;
    }
}


/home/max/Documents/JMLGPT/tmp/AddLoop.java:16: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:14: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y - n;
                    ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:27: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:25: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y + n;
                    ^
4 errors


public class AddLoop {
    //@ ensures \result == x + y;
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            //@ maintaining sum == x + y - n;
            //@ maintaining 0 <= n && n <= y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum + 1;
                n = n - 1;
                //@ maintaining sum == x + y - n;
                //@ decreasing n;
            }
        } else {
            int n = -y;
            //@ maintaining sum == x + y + n;
            //@ maintaining 0 <= n && n <= -y;
            //@ decreasing n;
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
                //@ maintaining sum == x + y + n;
                //@ decreasing n;
            }
        }
        return sum;
    }
}


/home/max/Documents/JMLGPT/tmp/AddLoop.java:16: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:14: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y - n;
                    ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:27: error: illegal start of statement
            }
            ^
/home/max/Documents/JMLGPT/tmp/AddLoop.java:25: error: Loop specifications must immediately precede a loop statement
                //@ maintaining sum == x + y + n;
                    ^
4 errors

